<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:shrinkColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/backButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_column="0"
                android:gravity="fill"
                android:text="@string/back"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/shoulderButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="fill"
                android:layout_column="1"
                android:text="@string/shoulder"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/legButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="fill"
                android:onClick="legsMain"
                android:text="@string/legs"
                android:layout_column="0"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="fill"
                android:onClick="absMain"
                android:layout_column="1"
                android:text="@string/abs_amp_core"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/chestButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="fill"
                android:layout_column="0"
                android:text="@string/chest"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <Button

                android:id="@+id/bicepButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="fill"
                android:layout_column="1"
                android:text="@string/biceps_triceps"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>